# prj-clube-mais-saudavel

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  scrapper.py
assets/: manual identity.docx
src/: get_club_activity.py  get_score.py  get_scraping.py  get_token.py  get_utils.py
