[project]
name = "prj-clube-mais-saudavel"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pandas>=2.2.3",
    "playwright>=1.50.0",
    "pyarrow>=19.0.0",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "ipykernel>=6.29.5",
    "isort>=6.0.0",
    "python-dotenv>=1.0.1",
]

[tool.black]
skip-string-normalization = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
